[gd_scene load_steps=10 format=2]

[ext_resource path="res://accesorios/sprites/1.png" type="Texture" id=1]
[ext_resource path="res://scripts/kBall.gd" type="Script" id=2]
[ext_resource path="res://scripts/player.gd" type="Script" id=3]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1.5, 111.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 110, 110 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 11.5, 113 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 510, 300.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 259.375, 10 )

[node name="Node2D" type="Node2D"]

[node name="player" type="KinematicBody2D" parent="."]
script = ExtResource( 3 )

[node name="playerSprite" type="Sprite" parent="player"]
material = SubResource( 1 )
position = Vector2( 0, 116 )
scale = Vector2( 0.1, 1 )
texture = ExtResource( 1 )
normal_map = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/Area2D"]
position = Vector2( 0, 116.5 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="player"]
position = Vector2( -9.5, 116.5 )
shape = SubResource( 4 )

[node name="Objective" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="Ball" type="Sprite" parent="Objective"]
position = Vector2( 536, 221 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objective"]
position = Vector2( 536, 221 )
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 3 )

[node name="enemy" type="KinematicBody2D" parent="."]

[node name="oponentSprite" type="Sprite" parent="enemy"]
position = Vector2( 1019, 108 )
scale = Vector2( 0.1, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy"]
position = Vector2( 1019.5, 107 )
shape = SubResource( 5 )

[node name="gameArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="gameArea"]
position = Vector2( 512, 300.5 )
shape = SubResource( 2 )

[node name="bouncyAreaDownEnemy" type="Area2D" parent="."]
position = Vector2( 11, 612 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bouncyAreaDownEnemy"]
position = Vector2( 763, -4 )
shape = SubResource( 6 )

[node name="bouncyAreaUpEnemy" type="Area2D" parent="."]
position = Vector2( 11, 612 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="bouncyAreaUpEnemy"]
position = Vector2( 758, -622 )
shape = SubResource( 6 )

[node name="bouncyAreaDownPlayer" type="Area2D" parent="."]
position = Vector2( -512, 612 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bouncyAreaDownPlayer"]
position = Vector2( 768, -4 )
shape = SubResource( 6 )

[node name="bouncyAreaUpPlayer" type="Area2D" parent="."]
position = Vector2( -512, 612 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="bouncyAreaUpPlayer"]
position = Vector2( 762.75, -622 )
shape = SubResource( 6 )

[connection signal="body_entered" from="player/Area2D" to="Objective" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="gameArea" to="Objective" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="bouncyAreaDownEnemy" to="Objective" method="_on_bouncyAreaDownEnemy_body_entered"]
[connection signal="body_entered" from="bouncyAreaUpEnemy" to="Objective" method="_on_bouncyAreaUpEnemy_body_entered"]
[connection signal="body_entered" from="bouncyAreaDownPlayer" to="Objective" method="_on_bouncyAreaDownPlayer_body_entered"]
[connection signal="body_entered" from="bouncyAreaUpPlayer" to="Objective" method="_on_bouncyAreaUpPlayer_body_entered"]
